objects/Error_Log__c.object
<CustomObject>
    <description>Object to log the error occurrds due to apex class, trigger exceptions.</description>
    <fields>
        <fullName>Apex_Class_Name__c</fullName>
        <label>Apex Class Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code_Type__c</fullName>
        <label>Code Type</label>
        <picklist>
            <picklistValues>
                <fullName>Apex Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Generated_On_Date__c</fullName>
        <label>Generated On Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Raw_Data__c</fullName>
        <label>Raw Data</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Record Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suggestion__c</fullName>
        <label>Suggestion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Name__c</fullName>
        <label>Trigger Name</label>
        <type>TextArea</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Object_Name__c</columns>
        <columns>Code_Type__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Generated_On_Date__c</columns>
        <columns>Suggestion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>